fix(order): update controller
